# PSO_Code

./: .README.md.swp  README.md  florians_bash_code_fur_sam.sh  functions_to_optimize.cpp  gameplan.txt  global_control_bash.sh  prepare_all.sh  preperationfordata.py  results.txt  tmp.txt
Moe/: .gitignore  CMakeLists.txt  aaa.sh  benchmark.sh  benchmark_euler.sh  benchmark_euler_new_and_improved.sh  benchmark_euler_particle_iter.sh  cleanup_result.py  iterator.sh  newsetup.sh  paps_vs_prec_vel.py  ps_functions  setup_and_run_pso.sh  time_iter_plotting.py  times_ps.txt
Moe/.history/: CMakeLists_20201123101428.txt  CMakeLists_20201126131842.txt  CMakeLists_20201127155110.txt  CMakeLists_20201127155207.txt  CMakeLists_20201129115003.txt  CMakeLists_20201129145632.txt  CMakeLists_20201201120108.txt  iterator_20201130225347.sh  iterator_20201201134456.sh  iterator_20201201134609.sh
Moe/.history/examples/: ps_functions_20201126120041.cpp  ps_functions_20201126120059.cpp  ps_functions_20201129114618.cpp  ps_functions_20201129143101.cpp  ps_functions_20201130113820.cpp  psps_functions_20201129114610.cpp  psps_functions_20201129115038.cpp  psps_functions_20201129115158.cpp  psps_functions_20201129134302.cpp  psps_functions_20201129143133.cpp  psps_functions_20201129150127.cpp  psps_functions_20201129150529.cpp  ssps_functions_20201129142706.cpp
Moe/.history/include/moe/: moe_20201127154323.hpp  moe_20201129110115.hpp  moe_20201129111331.hpp  moe_20201130210801.hpp
Moe/.history/include/moe/base/algorithms/: ParallelAsychronousPSO_20201129115709.hpp  ParallelAsychronousPSO_20201130120326.hpp  ParallelSynchronusPS0_20201125200438.hpp  ParallelSynchronusPS0_20201125201406.hpp  ParallelSynchronusPS0_20201129110658.hpp  ParallelSynchronusPS0_20201129111925.hpp  ParallelSynchronusPS0_20201129112004.hpp  ParallelSynchronusPS0_20201129112037.hpp  ParallelSynchronusPS0_20201129112625.hpp  ParallelSynchronusPS0_20201129112633.hpp  ParallelSynchronusPS0_20201129115115.hpp  ParallelSynchronusPS0_20201129134452.hpp  ParallelSynchronusPS0_20201129134605.hpp  ParallelSynchronusPS0_20201129134829.hpp  ParallelSynchronusPS0_20201129134853.hpp  ParallelSynchronusPS0_20201129135000.hpp  ParallelSynchronusPS0_20201129135148.hpp  ParallelSynchronusPS0_20201129135308.hpp  ParallelSynchronusPS0_20201129135350.hpp  ParallelSynchronusPS0_20201129135455.hpp  ParallelSynchronusPS0_20201129135518.hpp  ParallelSynchronusPS0_20201129135610.hpp  ParallelSynchronusPS0_20201129135634.hpp  ParallelSynchronusPS0_20201129135659.hpp  ParallelSynchronusPS0_20201129135817.hpp  ParallelSynchronusPS0_20201129135851.hpp  ParallelSynchronusPS0_20201129135913.hpp  ParallelSynchronusPS0_20201129140133.hpp  ParallelSynchronusPS0_20201129140432.hpp  ParallelSynchronusPS0_20201129140542.hpp  ParallelSynchronusPS0_20201129140618.hpp  (+27 more)
Moe/.history/results/: times_ps_20201201153118.txt  times_ps_20201201153315.txt  times_ps_20201201153338.txt
Moe/examples/: functions_to_optimize.hpp  paps_functions.cpp  paps_functions_multi_obj.cpp  paps_functions_precompute_vel.cpp  paps_functions_precompute_vel_2.cpp  paps_functions_precompute_vel_nonblocking.cpp  paps_functions_send_move.cpp  paps_functions_send_move_nnblc.cpp  paps_functions_send_move_part_unroll.cpp  paps_functions_send_move_smaller_packets.cpp  paps_functions_send_move_termcrit.cpp  ps_functions.cpp  psps_functions.cpp  psps_functions_k_AR_smaller.cpp  psps_functions_k_AllReduce.cpp  psps_functions_k_Reduce_Bcast.cpp  psps_functions_k_test.cpp  psps_functions_kristof.cpp  psps_functions_nonblocking.cpp  psps_functions_singlesend.cpp  ssps_functions.cpp
Moe/include/moe/: moe.hpp  moe.hpp.gch
Moe/include/moe/base/algorithms/: AlgorithmImpl.hpp  MPIDATAYPE_currentparticle.cpp  NumericAlgorithmImpl.hpp  ParallelAsychronousPSO.hpp  ParallelAsychronousPSO_multi_obj.hpp  ParallelAsychronousPSO_precompute_vel.hpp  ParallelAsychronousPSO_precompute_vel_2.hpp  ParallelAsychronousPSO_send_move.hpp  ParallelAsychronousPSO_send_move_nnblc.hpp  ParallelAsychronousPSO_send_move_part_unroll.hpp  ParallelAsychronousPSO_send_move_smaller_packets.hpp  ParallelAsychronousPSO_send_move_termcrit.hpp  ParallelAsynchronousPSO_precompute_vel_nonblocking.hpp  ParallelSynchronousPSO_k_AR_smaller.hpp  ParallelSynchronousPSO_k_AllReduce.hpp  ParallelSynchronousPSO_k_Reduce_Bcast.hpp  ParallelSynchronusPS0.hpp  ParallelSynchronusPS0_k_test.hpp  ParallelSynchronusPS0_kristof.hpp  ParticleSwarm.hpp  README.md
PGA/: README.md  (+6 more)
(+1522 files in other folders)
